[package]
name = "kw-hn"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
http_req_wasi = "0.10.2"
schedule-flows = "0.1.10"
serde = "1.0.156"
serde_derive = "1.0.156"
serde_json = "1.0.94"
slack-flows = "0.2.6"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt", "sync"] }
